--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <title>Search &#8212; Roman Supernova PIT Python Packaging Guide  documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=5ecbeea2" />
     <link rel="stylesheet" type="text/css" href="_static/basic.css?v=686e5160" />
-    <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=db0969fc" />
+    <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=b051e2c3" />
     
     <script src="_static/documentation_options.js?v=5929fcd5"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
@@ -40,6 +40,8 @@
 </p>
 
 
+
+<p class="blurb">Roman Supernova PIT Python packaging guide and template.</p>
 
 
 
