--- a/advanced/versioning.html
+++ b/advanced/versioning.html
@@ -7,7 +7,7 @@
 
     <title>Specifying the Version of your Package &#8212; Roman Supernova PIT Python Packaging Guide  documentation</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=5ecbeea2" />
-    <link rel="stylesheet" type="text/css" href="../_static/basic.css?v=686e5160" />
+    <link rel="stylesheet" type="text/css" href="../_static/basic.css?v=b08954a9" />
     <link rel="stylesheet" type="text/css" href="../_static/alabaster.css?v=b051e2c3" />
     <script src="../_static/documentation_options.js?v=5929fcd5"></script>
     <script src="../_static/doctools.js?v=9bcbadda"></script>
@@ -153,7 +153,7 @@ be installed.</p>
 <p>The solution to this implemented in the template (behind an opt-in option) is to
 make a subpackage called <cite>_dev</cite> which is not included in the dists (it is
 excluded in <code class="docutils literal notranslate"><span class="pre">MANIFEST.in</span></code>) which invokes setuptools. This <code class="docutils literal notranslate"><span class="pre">_dev</span></code> package is
-then invoked by the <code class="docutils literal notranslate"><span class="pre">my_pacakge/version.py</span></code> file, which will fall back to
+then invoked by the <code class="docutils literal notranslate"><span class="pre">my_pacakge/_version.py</span></code> file, which will fall back to
 reading the static version from <code class="docutils literal notranslate"><span class="pre">my_package/_version.py</span></code> file if it can’t
 access <code class="docutils literal notranslate"><span class="pre">_dev</span></code> (in the case where it’s not a dev install).</p>
 </section>
@@ -181,7 +181,7 @@ access <code class="docutils literal notranslate"><span class="pre">_dev</span><
       &#169;2024, Roman Supernova PIT.
       
       |
-      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
+      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.2.3</a>
       &amp; <a href="https://alabaster.readthedocs.io">Alabaster 1.0.0</a>
       
       |
